--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -14,6 +14,7 @@ html, body {
   height: 100%;
   width: 100%;
   background-size: cover;
+  
 
 }
 
@@ -24,11 +25,11 @@ html, body {
   font-family: 'Permanent Marker', sans-serif;
   font-size: 400%;
   text-size-adjust: auto;
-  background: rgb(0,0,0);
-  background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 26%, rgba(137,139,140,1) 69%, rgba(254,254,254,1) 100%);
-  border: 10%;
+  
 }
 
 .welcome-card {
   text-align: center;
+  color: white;
+  
 }
