--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -9,7 +9,7 @@ html, body {
 
 }
 #home {
-  background: url(weights.jpg) no-repeat 50%,50%;
+  background: url(ropes.jpg) no-repeat 50%,50%;
   display: table;
   height: 100%;
   width: 100%;
