added ID to submit buttons

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -33,3 +33,6 @@ html, body {
   color: white;
   
 }
+
+/* #user-join-submit = submit button on main page where user submits name */
+/* #submit-measurements */
