added data-measurement tags to user_stat buttons

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -41,5 +41,9 @@ h1  {
   /* animation-iteration-count: infinite; */
 }
 
+.query-button {
+  text-align: center;
+}
+
 /* #user-join-submit = submit button on main page where user submits name */
 /* #submit-measurements = submit button on measurements page */
