--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -22,9 +22,11 @@ html, body {
   margin-top: 15%;
   text-align: center;
   color: white;
-  font-family: 'Monoton', sans-serif;
-  font-size: 400%;
+  font-family: 'Londrina Outline', cursive;
+  font-size: 600%;
   text-size-adjust: auto;
+  animation-duration: 5s;
+  animation-delay: 0.3s;
   
 }
 
@@ -32,13 +34,6 @@ html, body {
   text-align: center;
   color: white;
   
-}
-
-.h1  {
-  animation-duration: 5s;
-  animation-delay: 0.3s;
-
-  /* animation-iteration-count: infinite; */
 }
 
 .query-button {
