--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -41,5 +41,9 @@ html, body {
  
 }
 
+#measurements-main {
+  color: white;
+}
+
 /* #user-join-submit = submit button on main page where user submits name */
 /* #submit-measurements = submit button on measurements page */
